fixed scrollbars

--- a/react-client/src/components/CategoriesHints/CategoriesHints.css
+++ b/react-client/src/components/CategoriesHints/CategoriesHints.css
@@ -1,3 +1,1 @@
-.right-panel .categories.categories-hints {
-    max-height: 119px;
-}
+
